--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html lang="en" class='scroll-smooth'>
+<html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mozgina Productions</title>
+    <meta name="description" property="og:description" content="Продюсирование фото | видео съёмок в Москве и Петербурге, консультация брендов">
+    <meta name="title" property="og:title" content="Mozgina Productions">
+    <meta name="type" property="og:type" content="website">
+    <meta name="url" property="og:url" content="https://mozgina.productions" />
+    <meta name="image" property="og:image" content="/preview.jpg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <meta name="theme-color" content="#ffffff">
   </head>
   <body>
     <div id="app"></div>
